chapter4/2a_service-using-manually_created_endpoints.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service # the name of the service must match the name of the Endpoints object
  # without specifying a Pod selector Kubernetes won't even create the Endpoints resource, It's up to me to create the Endpoints resource to specify the list of endpoint for the service  
  ports:
    - port: 80
