chapter4/2b_corresponding_endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: external-service # name must match the name of the service without selector
subsets:
  - addresses:
    - ip: 11.11.11.11
      # the IPs of the endpoints that the service will forward connections to 
    - ip: 22.22.22.22
    ports:
    - port: 80 # the target port of the endpoints
