chapter4/3_service_as_external_service_alias.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service
spec:
  type: ExternalName
  externalName: someapi.somecompany.com
  ports:
  - port: 80
  # after the service is created pods can connect to the external service through the external-service.default.svc.cluster.local
