chapter4/4_NodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: mynodeport-service
spec:
  selector:
    app: kubia
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30170
